# karigor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
karigor/: main.py
karigor/alembic/: modify_alembic_env.py
karigor/cmd/create/modules/: modules_create.py
karigor/cmd/create/modules/templates/: models.txt  repository.txt  route.txt  schemas.txt  services.txt
karigor/cmd/initials/: init_cmd.py  main.txt
karigor/cmd/initials/templates/: env_example.txt  env_setting_template.txt  main_template.txt  meta_data_template.txt  migrations_base.txt  route_api.txt
karigor/cmd/install_db/: install_db.py
karigor/cmd/install_db/templates/: alembic_env.txt
karigor/cmd/migration/: migration_create.py
karigor/cmd/utils/: write_from_template.py
karigor/helper/: append_migration.py  path_helper.py  register_route.py
