[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karigor"
version = "1.0.2"
description = "Laravel Artisan inspired CLI for Python - Automated Feature-Driven Backend Builder"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tawhid Jony", email = "tawhid.jony.jhm@gmail.com" }
]
# আপনার CLI টুলটি চালানোর জন্য এই ডিপেন্ডেন্সিগুলো বাধ্যতামূলক
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "inflect>=7.0.0",
    "sqlalchemy>=2.0.0"
]

# লারাভেল আর্টিসানের মতো গ্লোবাল কমান্ড লাইন ইন্টারফেস সচল করার জন্য:
[project.scripts]
karigor = "karigor.main:app"

# প্যাকেজিং করার সময় templates ফোল্ডার স্বয়ংক্রিয়ভাবে ইনক্লুড করার জন্য:
[tool.setuptools.packages.find]
where = ["."]
include = ["karigor*"]
